Napojení css stylů

--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <html lang="cs">
     <head>
+        <!-- kódování jazykové sady -->
         <meta charset="UTF-8">
+
+        <!-- napojení css stylů -->
+        <link type="text/css" rel="stylesheet" href="resources/style/base.css?v=1">
+        <link rel="stylesheet" type="text/css" media="screen and (min-width: 480px)" href="resources/style/from-480.css?v=1">
+        <link rel="stylesheet" type="text/css" media="screen and (min-width: 600px)" href="resources/style/from-480.css?v=1">
+        <link rel="stylesheet" type="text/css" media="screen and (min-width: 840px)" href="resources/style/from-480.css?v=1">
+        <link rel="stylesheet" type="text/css" media="screen and (min-width: 960px)" href="resources/style/from-480.css?v=1">
+        <link rel="stylesheet" type="text/css" media="screen and (min-width: 1280px)" href="resources/style/from-480.css?v=1">
+        <link rel="stylesheet" type="text/css" media="screen and (min-width: 1440px)" href="resources/style/from-480.css?v=1">
+        <link rel="stylesheet" type="text/css" media="screen and (min-width: 1600px)" href="resources/style/from-480.css?v=1">
+
     </head>
     <body>
         <h1>Hello data!</h1>
