--- a/index.html
+++ b/index.html
@@ -1,20 +1,63 @@
 <html lang="cs">
     <head>
+        <title>Big Data Workshop</title>
+
         <!-- kódování jazykové sady -->
         <meta charset="UTF-8">
 
         <!-- napojení css stylů -->
         <link type="text/css" rel="stylesheet" href="resources/style/base.css?v=1">
         <link rel="stylesheet" type="text/css" media="screen and (min-width: 480px)" href="resources/style/from-480.css?v=1">
-        <link rel="stylesheet" type="text/css" media="screen and (min-width: 600px)" href="resources/style/from-480.css?v=1">
-        <link rel="stylesheet" type="text/css" media="screen and (min-width: 840px)" href="resources/style/from-480.css?v=1">
-        <link rel="stylesheet" type="text/css" media="screen and (min-width: 960px)" href="resources/style/from-480.css?v=1">
-        <link rel="stylesheet" type="text/css" media="screen and (min-width: 1280px)" href="resources/style/from-480.css?v=1">
-        <link rel="stylesheet" type="text/css" media="screen and (min-width: 1440px)" href="resources/style/from-480.css?v=1">
-        <link rel="stylesheet" type="text/css" media="screen and (min-width: 1600px)" href="resources/style/from-480.css?v=1">
+        <link rel="stylesheet" type="text/css" media="screen and (min-width: 600px)" href="resources/style/from-600.css?v=1">
+        <link rel="stylesheet" type="text/css" media="screen and (min-width: 840px)" href="resources/style/from-840.css?v=1">
+        <link rel="stylesheet" type="text/css" media="screen and (min-width: 960px)" href="resources/style/from-960.css?v=1">
+        <link rel="stylesheet" type="text/css" media="screen and (min-width: 1280px)" href="resources/style/from-1280.css?v=1">
+        <link rel="stylesheet" type="text/css" media="screen and (min-width: 1440px)" href="resources/style/from-1440.css?v=1">
+        <link rel="stylesheet" type="text/css" media="screen and (min-width: 1600px)" href="resources/style/from-1600.css?v=1">
+
+        <!-- zakazuje zoomování obrazovky -->
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+
+        <!-- napojení Google fontů-->
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
+
+        <!-- napojení javascriptu -->
+        <script src="resources/js/scripts.js?v=1" defer></script>
 
     </head>
     <body>
-        <h1>Hello data!</h1>
+
+        <!-- menu -->
+        <nav class="mainMenu">
+            <a onclick="openMenu()" class="menuTrigger menuHidden" id="menuTrigger"></a>
+            <div class="menuItems menuHidden" id="menuItems">
+                <a href="#blueScreen" class="chapterLink">Blue Screen</a>
+                <a href="#turquoiseScreen" class="chapterLink">Turquoise Screen</a>
+                <a href="#lightScreen" class="chapterLink">Light Screen</a>
+                <a href="#greenScreen" class="chapterLink">Green Screen</a>
+                <a href="#brownScreen" class="chapterLink">Brown Screen</a>
+            </div>
+        </nav>
+
+        <!-- slidy s prezentací -->
+        <section class="chapterScreen blueScreen" id="blueScreen">
+            <h1>Big Wow!</h1>
+            <p>Data Visualization Workshop</p>
+        </section>
+        <section class="chapterScreen turquoiseScreen" id="turquoiseScreen">
+            <h2>Big Data</h2>
+        </section>
+        <section class="chapterScreen lightScreen" id="lightScreen">
+            <h2>Big Design</h2>
+        </section>
+        <section class="chapterScreen greenScreen" id="greenScreen">
+            <h2>Big Challenge</h2>
+        </section>
+        <section class="chapterScreen brownScreen" id="brownScreen">
+            <h2>Big Opportunity</h2>
+        </section>
+
+
     </body>
 </html>
