Přidává iframy s datastudiem

--- a/index.html
+++ b/index.html
@@ -32,32 +32,45 @@
         <nav class="mainMenu">
             <a onclick="openMenu()" class="menuTrigger menuHidden" id="menuTrigger"></a>
             <div class="menuItems menuHidden" id="menuItems">
-                <a href="#blueScreen" class="chapterLink">Blue Screen</a>
-                <a href="#turquoiseScreen" class="chapterLink">Turquoise Screen</a>
-                <a href="#lightScreen" class="chapterLink">Light Screen</a>
-                <a href="#greenScreen" class="chapterLink">Green Screen</a>
-                <a href="#brownScreen" class="chapterLink">Brown Screen</a>
+                <a href="#bigWow" class="chapterLink">Big Wow</a>
+                <a href="#bigDesign" class="chapterLink">Big Design</a>
+                <a href="#bigData" class="chapterLink">Big Data</a>
+                <a href="#data1" class="chapterLink">DataStudio 1</a>
+                <a href="#bigChallenge" class="chapterLink">Big Challenge</a>
+                <a href="#data2" class="chapterLink">DataStudio 2</a>
+                <a href="#bigOpportunity" class="chapterLink">Big Opportunity</a>
             </div>
         </nav>
 
         <!-- slidy s prezentací -->
-        <section class="chapterScreen blueScreen" id="blueScreen">
+        <section class="chapterScreen blueScreen" id="bigWow">
             <h1>Big Wow!</h1>
             <p>Data Visualization Workshop</p>
         </section>
-        <section class="chapterScreen turquoiseScreen" id="turquoiseScreen">
-            <h2>Big Data</h2>
-        </section>
-        <section class="chapterScreen lightScreen" id="lightScreen">
+
+        <section class="chapterScreen lightScreen" id="bigDesign">
             <h2>Big Design</h2>
         </section>
-        <section class="chapterScreen greenScreen" id="greenScreen">
-            <h2>Big Challenge</h2>
-        </section>
-        <section class="chapterScreen brownScreen" id="brownScreen">
-            <h2>Big Opportunity</h2>
+
+        <section class="chapterScreen turquoiseScreen" id="bigData">
+            <h2>Big Data</h2>
         </section>
 
+        <section class="dataScreen" id="data1">
+            <iframe src="https://datastudio.google.com/embed/reporting/8132bab1-2244-4c29-808a-a451aa1febbd/page/SW1HC" frameborder="0" style="border:0; width:100%; height:100vh;" allowfullscreen class="dsIframe"></iframe>
+        </section>
+
+        <section class="chapterScreen greenScreen" id="bigChallenge">
+            <h2>Big Challenge</h2>
+        </section>
+
+        <section class="dataScreen" id="data2">
+            <iframe src="https://datastudio.google.com/embed/reporting/8132bab1-2244-4c29-808a-a451aa1febbd/page/eY1HC" frameborder="0" style="border:0; width:100%; height:100vh;" allowfullscreen class="dsIframe"></iframe>
+        </section>
+
+        <section class="chapterScreen brownScreen" id="bigOpportunity">
+            <h2>Big Opportunity</h2>
+        </section>
 
     </body>
 </html>
